Track necessary file.

--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,9 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Gabriel Added
+Dependencies/
+Debug/
+Robot_Animation_Editor/src/lib/
+Robot_Animation_Editor/res/robot/
