Translate and rotation function in Node class. Integrate these transform function into editor.

--- a/Robot_Animation_Editor/imgui.ini
+++ b/Robot_Animation_Editor/imgui.ini
@@ -3,6 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][Parts of the Robot]
-Pos=443,54
-Size=184,363
+Pos=381,34
+Size=194,363
+
+[Window][Transformation]
+Pos=60,60
+Size=228,100
+
+[Window][Transformation of the Robot]
+Pos=412,439
+Size=346,252
 
