Complete robot standing motion. Bugs in camara rotation(gimbal lock) haven't fixed.

--- a/Robot_Animation_Editor/imgui.ini
+++ b/Robot_Animation_Editor/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Parts of the Robot]
-Pos=699,56
+Pos=561,21
 Size=194,363
 
 [Window][Transformation]
@@ -11,6 +11,10 @@ Pos=60,60
 Size=228,100
 
 [Window][Transformation of the Robot]
-Pos=643,458
+Pos=82,95
 Size=346,252
+
+[Window][Configure Panel]
+Pos=599,22
+Size=300,432
 
